--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     
     <div class="myImgContainer">
       
-      <img src="/img/Year/2025/%e6%af%95%e4%b8%9a%e7%ad%94%e8%be%a9.jpg" alt="pic" style="border-radius: 10px; margin-top: 10%; max-width: 100%; max-height: 100%">
+      <img src="/img/Year/2025/%e7%a0%94%e7%a9%b6%e7%94%9f%e5%bd%95%e5%8f%96%e9%80%9a%e7%9f%a5.jpg" alt="pic" style="border-radius: 10px; margin-top: 10%; max-width: 100%; max-height: 100%">
     </div>
     <div class="myTitle">
       <div class="myWrapper hover-underline-animation">
